<resources>
    <string name="app_name">Encrypto</string>
    <string name="app_description">A virtual stock market like event based on cryptocurrency, organized at the E-Summit held at Sardar Patel Institute of Technology, Mumbai</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>

    <string name="icon">Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password_length_prompt">Password must be at least 8 characters long</string>
    <string name="invalid_email_prompt">Please input a valid email address</string>
    <string name="or">OR</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="input_name_prompt">Please input yor name to be show on leaderboards</string>
    <string name="password_mismatch_prompt">Passwords do not match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_name">Invalid name</string>

    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="transaction_history">Transaction History</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="portfolio">Portfolio</string>

    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="assets">Assets</string>
    <string name="username">Username</string>
    <string name="please_wait">Please wait…</string>
    <string name="balance">Balance</string>
    <string name="balance_placeholder">Balance: $ %1$s</string>
    <string name="buy">Buy</string>
    <string name="buy_currency_placeholder">Buy %1$s</string>
    <string name="sell">Sell</string>
    <string name="sell_currency_placeholder">Sell %1$s</string>
    <string name="no_transactions">No transactions to show</string>
    <string name="no_currencies">No currencies to show</string>
    <string name="owned_label">Owned:\ </string>
    <string name="dollar_symbol">$</string>
    <string name="variation_default">+0.00%</string>
    <string name="notices">Notices</string>
    <string name="attribution_text">Various openly available libraries were used in the making of this app. Attributions for them can be seen by clicking the button below</string>
    <string name="third_party_libs">Third party attributions</string>
    <string name="developers">Developers</string>
    <string name="dev_desc">Developed by Tejas Bhitle and Samriddha Basu</string>
    <string name="package_name">Package name:\ </string>
    <string name="version_name">Version:\ </string>
    <string name="version_code">Version Code:\ </string>
    <string name="symbol">Symbol:\ </string>
    <string name="value">Value:\ </string>
    <string name="variation">Variation</string>
    <string name="variation_over_time">Price variation over time</string>
    <string name="select_quantity">Select quantity</string>
    <string name="cost">Cost</string>
    <string name="balance_after_purchase">Balance after purchase</string>
    <string name="confirm_purchase">Confirm purchase</string>
    <string name="total">Total</string>
    <string name="confirm_sale">Confirm sale</string>
    <string name="net_worth">Net worth</string>
    <string name="net_worth_placeholder">Net worth: $ %1$s</string>
    <string name="_owned">\ owned</string>
</resources>